--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,5 +8,9 @@
 </head>
 <body>
     
+    {{{body}}}
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="frontEnd.js"></script>
 </body>
 </html>
