--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,10 +8,11 @@
     <title>NYT Scraper</title>
 </head>
 <body>
+    
     {{> _navbar}}
-
+<div class="container">
     {{{body}}}
-
+</div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="frontEnd.js"></script>
 </body>
