now adding a note doesn't delete the article

--- a/views/savedArticles/saved.handlebars
+++ b/views/savedArticles/saved.handlebars
@@ -6,7 +6,7 @@
     <p class="card-text">{{summary}}</p>
     <hr>
    <button class="btn btn-warning deleteThis" id="{{_id}}">Delete this article</button>
-   <button class="btn btn-info deleteThis" id="{{_id}}">Add a Note</button>
+   <button class="btn btn-info notateThis" id="{{_id}}">Add a Note</button>
   </div>
 </div>
 </div>
