--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>NYT Scraper</title>
 </head>
 <body>
     
     {{> _navbar}}
 <div class="container">
+    <div class="row justify-content-center mt-5">
+    <h1>New York Times Scraper</h1>
+    </div>
+    <div class="row justify-content-center mb-5">
+    <p>Hit the Scrape button above to get new articles!</p>
+    </div>
     {{{body}}}
 </div>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
