--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link btn btn-danger mr-2" href="/saved-articles">Saved Articles <span class="sr-only">(current)</span></a>
+        <a class="nav-link btn btn-danger mr-2" href="/saved-articles">Saved Articles </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-primary" href="/display-articles">Scrape new articles</a>
+      <li class="nav-item active">
+        <a class="nav-link btn btn-primary" href="/display-articles">Scrape Articles!</a>
       </li>
   </div>
 </nav>
